# TaskZenAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  celery_app.py  yasg.py
src/config/: settings.py  urls.py
src/notifications/: admin.py  models.py  serializers.py  urls.py
src/static/drf-yasg/redoc/: redoc.min.js
src/static/drf-yasg/redoc-old/: redoc.min.js
src/static/drf-yasg/swagger-ui-dist/: swagger-ui-bundle.js  swagger-ui-es-bundle.js  swagger-ui-standalone-preset.js
src/static/rest_framework/docs/js/: highlight.pack.js
src/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
